--- a/src/main/resources/templates/batch/batch-detail.html
+++ b/src/main/resources/templates/batch/batch-detail.html
@@ -17,7 +17,7 @@
         <h1>Batch Details</h1>
     </div>
     <div class="col-4">
-        <a href="/batch/new">
+        <a href="/batch/add">
             <button class="btn btn-primary" align="center">New Batch</button>
         </a>
     </div>
