--- a/src/main/resources/templates/discount/discount-detail.html
+++ b/src/main/resources/templates/discount/discount-detail.html
@@ -17,7 +17,7 @@
         <h1>Discount Details</h1>
     </div>
     <div class="col-4">
-        <a href="/discount/new">
+        <a href="/discount/add">
             <button class="btn btn-primary" align="center">Create a Discount</button>
         </a>
     </div>
