--- a/src/main/resources/templates/discount/discount.html
+++ b/src/main/resources/templates/discount/discount.html
@@ -14,7 +14,7 @@
     <div class="col-4">
         <h1>Discount Management</h1>
     </div>
-    <div class="col-4"> <a href="/discount/new">
+    <div class="col-4"> <a href="/discount/add">
         <button class="btn btn-primary">Create a Discount</button>
     </a></div>
 </div>
