--- a/src/main/resources/templates/payment/payment-detail.html
+++ b/src/main/resources/templates/payment/payment-detail.html
@@ -11,7 +11,7 @@
 
 <!--<div class="row bg-secondary">-->
 <!--    <div class="col-4">-->
-<!--        <a href="/payment/new">-->
+<!--        <a href="/payment/add">-->
 <!--            <button class="btn btn-info">Make a Payment</button>-->
 <!--        </a>-->
 <!--    </div>-->
@@ -121,7 +121,7 @@
         <h1>Payment Details</h1>
     </div>
     <div class="col-4">
-        <a href="/payment/new">
+        <a href="/payment/add">
             <button class="btn btn-primary" align="center">Make a Payment</button>
         </a>
     </div>
