--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -11,7 +11,7 @@
 
 <!--<div class="row bg-secondary">-->
 <!--    <div class="col-4">-->
-<!--        <a href="/payment/new">-->
+<!--        <a href="/payment/add">-->
 <!--            <button class="btn btn-primary">Create Payment</button>-->
 <!--        </a>-->
 <!--    </div>-->
@@ -79,7 +79,7 @@
         <h1>Payment Management</h1>
     </div>
     <div class="col-4">
-        <a href="/payment/new">
+        <a href="/payment/add">
         <button class="btn btn-primary">Make a Payment</button>
         </a>
     </div>
