--- a/src/main/resources/templates/school/school.html
+++ b/src/main/resources/templates/school/school.html
@@ -17,7 +17,7 @@
         <h1>School Management</h1>
     </div>
     <div class="col-4">
-        <a href="/school/new">
+        <a href="/school/add">
             <button class="btn btn-primary" align="center">New School</button>
         </a>
     </div>
