--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -11,7 +11,7 @@
 
 <!--<div class="row bg-secondary">-->
 <!--    <div class="col-4">-->
-<!--        <a href="/student/new">-->
+<!--        <a href="/student/add">-->
 <!--            <button class="btn btn-info">New Student</button>-->
 <!--        </a>-->
 <!--    </div>-->
@@ -161,7 +161,7 @@
         <h1>Details of Student</h1>
     </div>
     <div class="col-4">
-        <a href="/student/new">
+        <a href="/student/add">
             <button class="btn btn-primary" align="center">Add new Student</button>
         </a>
     </div>
