--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -17,7 +17,7 @@
     <div class="col-4">
         <h1>Student Management</h1>
     </div>
-    <div class="col-4"> <a href="/student/new">
+    <div class="col-4"> <a href="/student/add">
         <button class="btn btn-primary">Register a new Student</button>
     </a></div>
 </div>
