--- a/src/main/resources/templates/subject/subject-detail.html
+++ b/src/main/resources/templates/subject/subject-detail.html
@@ -96,7 +96,7 @@
         <h1>Subject Details</h1>
     </div>
     <div class="col-4">
-        <a href="/subject/new">
+        <a href="/subject/add">
             <button class="btn btn-primary" align="center">Add new Subject</button>
         </a>
     </div>
