--- a/src/main/resources/templates/subject/subject.html
+++ b/src/main/resources/templates/subject/subject.html
@@ -19,7 +19,7 @@
         <h1>Subject Management</h1>
     </div>
     <div class="col-4">
-        <a href="/subject/new">
+        <a href="/subject/add">
             <button class="btn btn-primary" align="center">New Subject</button>
         </a>
     </div>
