--- a/src/main/resources/templates/teacher/teacher.html
+++ b/src/main/resources/templates/teacher/teacher.html
@@ -53,7 +53,7 @@
     <div class="col-4">
         <h1>Teacher Management</h1>
     </div>
-    <div class="col-4"> <a href="/teacher/new">
+    <div class="col-4"> <a href="/teacher/add">
         <button class="btn btn-primary">Register a new Teacher</button>
     </a></div>
 </div>
