--- a/src/main/resources/templates/timeTable/timeTable.html
+++ b/src/main/resources/templates/timeTable/timeTable.html
@@ -11,7 +11,7 @@
 
 <div class="row bg-secondary">
     <div class="col-4">
-        <a href="/timeTable/new">
+        <a href="/timeTable/add">
             <button class="btn btn-primary">New TimeTable</button>
         </a>
     </div>
