--- a/src/main/resources/templates/hall/hall.html
+++ b/src/main/resources/templates/hall/hall.html
@@ -19,7 +19,7 @@
         <h1>Hall Management</h1>
     </div>
     <div class="col-4">
-        <a href="/hall/new">
+        <a href="/hall/add">
             <button class="btn btn-primary" align="center">New Hall</button>
         </a>
     </div>
