--- a/src/main/resources/templates/teacher/teacher-detail.html
+++ b/src/main/resources/templates/teacher/teacher-detail.html
@@ -11,7 +11,7 @@
 
 <!--<div class="row bg-secondary">-->
 <!--    <div class="col-4">-->
-<!--        <a href="/teacher/new">-->
+<!--        <a href="/teacher/add">-->
 <!--            <button class="btn btn-info">New Teacher</button>-->
 <!--        </a>-->
 <!--    </div>-->
@@ -167,7 +167,7 @@
         <h1>Details of teacher/h1>
     </div>
     <div class="col-4">
-        <a href="/teacher/new">
+        <a href="/teacher/add">
             <button class="btn btn-primary" align="center">Add new teacher</button>
         </a>
     </div>
