--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -40,10 +40,10 @@
             <tbody>
             <tr data-th-each="batch, index : ${batchs }">
                 <td data-th-text="${index.count}"></td>
-                <td data-th-text="${batch.classReferance}"></td>
+                <td data-th-text="${batch.code}"></td>
                 <td data-th-text="${batch.year}"></td>
-                <td data-th-text="${batch.grade}"></td>
-                <td data-th-text="${batch.subject.name}"></td>
+                <td data-th-text="${batch.grade.grade}"></td>
+                <td data-th-text="${batch.name}"></td>
                 <td data-th-text="${batch.teacher.firstName}"></td>
 
 
