--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -111,7 +111,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${fee}">Tution Fee</label>
             <div class="col-sm-4">
-                <input type="text" id="fee" class="form-control" data-th-field="*{fee}">
+                <input type="number" id="fee" class="form-control" data-th-field="*{fee}">
             </div>
         </div>
 
