--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -26,7 +26,7 @@
 
 <div class="container" >
   <form action="/batch/save" data-th-object="${batch}" method="post" >
-    <div class="form-row text-right" data-th-if="${addStatus==false}" >
+    <div class="form-group text-right" data-th-if="${addStatus==false}" >
       <div class="col-md-4" >
         <label data-th-for="${id}" >Id</label >
       </div >
@@ -41,13 +41,13 @@
       <label class="col-sm-3 control-label" data-th-for="${'code'}" >Batch Reff</label >
       <div class="col-sm-9" >
         <input type="text" data-th-field="*{code}" id="batchId" placeholder="Batch ID" class="form-control"
-               autofocus readonly>
+               autofocus readonly >
       </div >
     </div >
     <div class="form-group" >
       <label class="col-sm-2 control-label" data-th-for="${'year'}" >Academic Year</label >
       <div class="col-sm-3" >
-        <select id="year" class="form-control" data-th-field="*{year}" required>
+        <select id="year" class="form-control" data-th-field="*{year}" required >
           <option value="2021" >2021</option >
           <option value="2022" >2022</option >
           <option value="2023" >2023</option >
@@ -58,10 +58,11 @@
           <option value="2028" >2028</option >
         </select >
       </div >
-
+    </div >
+    <div class="form-group" >
       <label class="col-sm-1 control-label" data-th-for="${'grade'}" >Grade</label >
       <div class="col-sm-5" >
-        <select id="grade" class="form-control" data-th-field="*{grade}" required>
+        <select id="grade" class="form-control" data-th-field="*{grade}" required >
           <option value="" >Select the Grade</option >
           <option data-th-each="grade : ${grades}"
                   data-th-text="${grade.grade}"
@@ -72,7 +73,7 @@
     <div class="form-group" >
       <label data-th-for="${'teacher'}" class="col-sm-3 control-label" >Teacher Name</label >
       <div class="col-sm-9" >
-        <select id="teacher" class="form-control" data-th-field="*{teacher}" required>
+        <select id="teacher" class="form-control" data-th-field="*{teacher}" required >
           <option value="" >Select the Teacher</option >
           <option data-th-each="teacher : ${teachers}"
                   data-th-text="${teacher.firstName}"
@@ -83,7 +84,7 @@
     <div class="form-group" >
       <label data-th-for="${'classDay'}" class="col-sm-3 control-label" >Class Day</label >
       <div class="col-sm-9" >
-        <select id="classDay" class="form-control" data-th-field="*{classDay}" required>
+        <select id="classDay" class="form-control" data-th-field="*{classDay}" required >
           <option value="" >Select Day</option >
           <option data-th-each="classDay : ${classDays}"
                   data-th-text="${classDay.classDay}"
@@ -96,23 +97,29 @@
       <div class="col-sm-9" >
         <div class="form-group" >
           <label for="startAt" >FROM (opening hours 08:00 to 20:00) :</label >
-          <input class="form-control" id="startAt" data-th-field="*{startAt}" type="time" step="3600"  min="08:00" max="20:00"/>
+          <input class="form-control" id="startAt" data-th-field="*{startAt}" type="time" step="3600" min="08:00"
+                 max="20:00" />
         </div >
         <div class="form-group" >
           <label for="endAt" >TO (opening hours 08:00 to 20:00) :</label >
-          <input class="form-control" id="endAt" data-th-field="*{endAt}" type="time" step="3600" min="08:00" max="20:00"/>
+          <input class="form-control" id="endAt" data-th-field="*{endAt}" type="time" step="3600" min="08:00"
+                 max="20:00" />
         </div >
       </div >
     </div >
-
     <div class="form-group" >
       <label data-th-for="${name}" class="col-sm-3 control-label" >Batch Name</label >
       <div class="col-sm-9" >
         <input type="text" data-th-field="*{name}" id="name" placeholder="Batch Name" class="form-control"
-               autofocus readonly>
+               autofocus readonly >
       </div >
     </div >
-
+    <div class="form-group" >
+      <label id="errorLabel" data-th-if="${#fields.hasErrors('*')}" data-th-text="'Errors: '" >Errors: </label >
+      <ul >
+        <li id="error" data-th-each="err : ${#fields.errors('*')}" data-th-text="${err}" class="error" ></li >
+      </ul >
+    </div >
     <div class="row container-fluid" >
       <div class="col-sm-2 col-sm-offset-2" >
         <button type="button" class="btn btn-danger btn-block" >Back</button >
@@ -134,61 +141,61 @@
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
 <script >
-$("#teacher, #grade, #year,#startAt, #endAt").change(function () {
-    let id = $("#teacher").val();
-    let startDateTime = $(`#startAt`).val();
-    let endDateTime = $("#endAt").val();
-    let day = $("#classDay").val();
-    if(id && startDateTime && endDateTime) {
-        $.ajax({
-            type: 'GET',
-            url: $("#subjectUrl").val() + id,
-            success: function (resp) {
-                if (startDateTime !== "" && endDateTime !== "") {
-                    let sDT = Date.parse('20 Aug 2020 '+startDateTime);
-                    let eDT = Date.parse('20 Aug 2020 '+endDateTime);
-                    if (sDT > eDT) {
-                        swal({
-                            title: "Could you accept those time.. !",
-                            icon: "warning",
-                            text: "Please check your time \n End Time can not be less than Start Time",
-                        })
-                        $(`#endAt`).val(startDateTime);
+    $("#teacher, #grade, #year,#startAt, #endAt").change(function () {
+        let id = $("#teacher").val();
+        let startDateTime = $(`#startAt`).val();
+        let endDateTime = $("#endAt").val();
+        let day = $("#classDay").val();
+        if (id && startDateTime && endDateTime) {
+            $.ajax({
+                type: 'GET',
+                url: $("#subjectUrl").val() + id,
+                success: function (resp) {
+                    if (startDateTime !== "" && endDateTime !== "") {
+                        let sDT = Date.parse('20 Aug 2020 ' + startDateTime);
+                        let eDT = Date.parse('20 Aug 2020 ' + endDateTime);
+                        if (sDT > eDT) {
+                            swal({
+                                title: "Could you accept those time.. !",
+                                icon: "warning",
+                                text: "Please check your time \n End Time can not be less than Start Time",
+                            })
+                            $(`#endAt`).val(startDateTime);
+                        }
                     }
+                    $("#name").val($("#year").val()
+                        + "-" + $("#grade").val()
+                        + "-" + $("#teacher option:selected").html().toUpperCase()
+                        + "-" + resp.name.toUpperCase()
+                        + "-" + day
+                        + "-" + startDateTime
+                        + "-" + endDateTime);
+
+                },
+                error: function (err) {
+                    console.log(err);
                 }
-                $("#name").val($("#year").val()
-                    +"-" + $("#grade").val()
-                    +"-" + $("#teacher option:selected").html().toUpperCase()
-                    +"-" + resp.name.toUpperCase()
-                    +"-" + day
-                    +"-" + startDateTime
-                    +"-"+ endDateTime);
+            });
+        }
+    });
 
-            },
-            error: function (err) {
-                console.log(err);
-            }
-        });
-    }
-});
-
-// $("#startAt, #endAt").change(
-// function dateMatch() {
-//     let startDateTime = $(`#startAt`).val();
-//     let endDateTime = $("#endAt").val();
-//     if (startDateTime !== "" && endDateTime !== "") {
-//        let sDT = Date.parse('20 Aug 2020 '+startDateTime);
-//        let eDT = Date.parse('20 Aug 2020 '+endDateTime);
-//         if (sDT > eDT) {
-//             swal({
-//                 title: "Could you accept those time.. !",
-//                 icon: "warning",
-//                 text: "Please check your time \n End Time can not be less than Start Time",
-//             })
-//             $(`#endAt`).val(startDateTime);
-//         }
-//     }
-// });
+    // $("#startAt, #endAt").change(
+    // function dateMatch() {
+    //     let startDateTime = $(`#startAt`).val();
+    //     let endDateTime = $("#endAt").val();
+    //     if (startDateTime !== "" && endDateTime !== "") {
+    //        let sDT = Date.parse('20 Aug 2020 '+startDateTime);
+    //        let eDT = Date.parse('20 Aug 2020 '+endDateTime);
+    //         if (sDT > eDT) {
+    //             swal({
+    //                 title: "Could you accept those time.. !",
+    //                 icon: "warning",
+    //                 text: "Please check your time \n End Time can not be less than Start Time",
+    //             })
+    //             $(`#endAt`).val(startDateTime);
+    //         }
+    //     }
+    // });
 
 </script >
 </body >
