--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -100,6 +100,17 @@
       </div >
     </div >
     <div class="form-group" >
+      <label class="col-sm-1 control-label" data-th-for="${'grade'}" >Grade</label >
+      <div class="col-sm-5" >
+        <select id="grade" class="form-control" data-th-field="*{grade}" required >
+          <option value="" >Select the Grade</option >
+          <option data-th-each="grade : ${grades}"
+                  data-th-text="${grade.grade}"
+                  data-th-value="${grade}" ></option >
+        </select >
+      </div >
+    </div >
+    <div class="form-group" >
       <label class="col-sm-2 control-label" data-th-for="${mobile}" >Mobile number</label >
       <div class="col-sm-4" >
         <input type="tel" id="mobile" class="form-control" data-th-field="*{mobile}" >
