--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
 
 </head>
@@ -57,7 +57,7 @@
 
 
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
