--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav   data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 <main>
 <div class="col-12 col-sm-12 col-md-12 mt-4">
     <div class="container-fluid" th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
@@ -36,7 +36,7 @@
 </div>
 </main>
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
