--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav   data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-dark formBorder">
     <div class="col-md-12 flex-column ">
@@ -86,7 +86,7 @@
     <strong> <span id="messageNote" th:text="${message}"></span></strong>
 </div>
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
