Student add was started

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -34,7 +34,7 @@
 </div>
 <div class="container-fluid formBorder text-center">
     <div class="col">
-        <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
+        <div class="col" id="employeeListPresent"   data-th-if="${not #lists.isEmpty(employees)}">
             <table class="table table-hover table-striped" id="myTable">
                 <thead>
                 <tr>
@@ -49,8 +49,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="employee, rowCount : ${employees}">
-                    <th th:text="${rowCount.count}"></th>
+                <tr   data-th-each="employee, rowCount : ${employees}">
+                    <th   data-th-text="${rowCount.count}"></th>
                     <th>
                         <div class="image" data-th-if="${employee.fileInfo !=null}" >
                             <img id="img" class="rounded"
@@ -59,16 +59,16 @@
                                  data-th-src="${employee.fileInfo.url}" />
                         </div >
                     </th>
-                    <th th:text="${employee.code}"></th>
-                    <th th:text="${employee.callingName}"></th>
-                    <th th:text="${employee.mobileOne}"></th>
-                    <th th:text="${employee.designation.designation}"></th>
-                    <th th:text="${employee.employeeStatus.employeeStatus}"></th>
+                    <th   data-th-text="${employee.code}"></th>
+                    <th   data-th-text="${employee.callingName}"></th>
+                    <th   data-th-text="${employee.mobileOne}"></th>
+                    <th   data-th-text="${employee.designation.designation}"></th>
+                    <th   data-th-text="${employee.employeeStatus.employeeStatus}"></th>
                     <th>
-                        <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm">&nbsp;View</a>
-                        <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
-                        <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
-                           th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
+                        <a id="employeeView"   data-th-href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm">&nbsp;View</a>
+                        <a id="employeeEdit"   data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
+                        <a id="employeeRemove"   data-th-href="${'/employee/remove/' + employee.id}"
+                             data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
                             Delete</a>
                     </th>
                 </tr>
@@ -76,7 +76,7 @@
             </table>
         </div>
     </div>
-    <div class="row" th:if="${ #lists.isEmpty(employees)}">
+    <div class="row"   data-th-if="${ #lists.isEmpty(employees)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
