--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -11,7 +11,7 @@
     <div class="container-fluid" th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
         <div class="container text-center">
             <h1 class="invalid-feedback" th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
-            <h1 class="invalid-feedback" th:if="${accessDenied!=null}" th:text="${accessDenied}">404</h1>
+            <h1 class="invalid-feedback"   data-th-if="${accessDenied!=null}"   data-th-text="${accessDenied}">404</h1>
         </div>
         <div class="col-12 col-sm-12 col-md-12 mt-4 mb-4 p-4">
             <marquee behavior="scroll" direction="left">
@@ -23,7 +23,7 @@
             </marquee>
         </div>
         <div class="container-fluid mt-4 text-center">
-            <p class="invalid-feedback" th:text="${errorMessage}">Error java.lang.NullPointerException</p>
+            <p class="invalid-feedback"   data-th-text="${errorMessage}">Error java.lang.NullPointerException</p>
         </div>
         <div class="container-fluid text-center">
             <a href="/home">
