--- a/src/main/resources/templates/role/addRole.html
+++ b/src/main/resources/templates/role/addRole.html
@@ -17,7 +17,7 @@
         <div class="col">
             <h4 class="text-light text-center">
                 <strong>
-                    <span id="formHeader" th:text="${addStatus==true?'New Role ':'Update Role'}"></span>
+                    <span id="formHeader"   data-th-text="${addStatus==true?'New Role ':'Update Role'}"></span>
                 </strong>
             </h4>
         </div>
@@ -34,7 +34,7 @@
               th:object="${role}">
             <div class="form-batch col-md-12 col-sm-12 text-center flex-column">
                 <div class="col-sm-6 col-md-6 offset-2">
-                    <div id="idHide" th:if="${addStatus==false}" class="form-row text-right">
+                    <div id="idHide"   data-th-if="${addStatus==false}" class="form-row text-right">
                         <div class="col-md-4">
                             <label class="control-label" for="id">ID :</label>
                         </div>
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col-md-8">
                             <input id="roleName" th:field="*{roleName}" class="form-control" type="text" required/>
-                            <span id="roleNameError" th:errors="*{roleName}" th:if="${#fields.hasErrors('roleName')}" class="error">Error Role Name</span>
+                            <span id="roleNameError" th:errors="*{roleName}"   data-th-if="${#fields.hasErrors('roleName')}" class="error">Error Role Name</span>
                         </div>
                     </div>
                 </div>
@@ -56,14 +56,14 @@
             <div class="form-batch col-md-12 col-sm-12 text-center flex-column">
                 <button class="btn btn-success" type="submit">
                     <i class="fa fa-save" style="font-size: 20px"></i>&nbsp; &nbsp;<span
-                        id="submit" th:text="${addStatus==true?'Save': 'Update'}">                        </span>
+                        id="submit"   data-th-text="${addStatus==true?'Save': 'Update'}">                        </span>
                 </button>
             </div>
             <!--Error-->
             <div class="form-row">
-                <label id="errorLabel" th:if="${#fields.hasErrors('*')}" th:text="'Errors: '">Errors: </label>
+                <label id="errorLabel"   data-th-if="${#fields.hasErrors('*')}" th:text="'Errors: '">Errors: </label>
                 <ul>
-                    <li id="errorDisplay" th:each="err: ${#fields.errors('*')}" th:utext="${err}" class="error"></li>
+                    <li id="errorDisplay"   data-th-each="err: ${#fields.errors('*')}" th:utext="${err}" class="error"></li>
                 </ul>
             </div>
         </form>
