--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -18,7 +18,7 @@
         <div class="col">
             <h4 class="text-light text-center">
                 <strong>
-                    <span id="formHeader" th:text="${addStatus==true?'New User':'Update User'}"></span>
+                    <span id="formHeader"   data-th-text="${addStatus==true?'New User':'Update User'}"></span>
                 </strong>
             </h4>
         </div>
@@ -30,7 +30,7 @@
     </div>
 </div>
 <!--Employee find-->
-<div class="container-fluid bg-dark formBorder" id="employeeFindForm" th:if="${employeeDetailShow==false}">
+<div class="container-fluid bg-dark formBorder" id="employeeFindForm"   data-th-if="${employeeDetailShow==false}">
     <div class="col-sm-12 flex-column ">
         <form id="form" method="POST" th:action="${'/user/workingPlace'}" th:object="${employee}"
               enctype="multipart/form-data">
@@ -81,25 +81,25 @@
     </div>
 </div>
 <!--Employee not fount message-->
-<div id="employeeNotFoundShow" th:if="${employeeNotFoundShow==true}"
+<div id="employeeNotFoundShow"   data-th-if="${employeeNotFoundShow==true}"
      class="alert alert-warning alert-dismissible fade show text-center" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <strong><span id="employeeNotFound" th:text="${employeeNotFound}"></span></strong>
+    <strong><span id="employeeNotFound"   data-th-text="${employeeNotFound}"></span></strong>
     <script>
         $(".alert").alert();
     </script>
 </div>
 
 <!--User add from-->
-<div class="container-fluid bg-dark formBorder" th:if="${employeeDetailShow==true}" id="userFormShow">
+<div class="container-fluid bg-dark formBorder"   data-th-if="${employeeDetailShow==true}" id="userFormShow">
     <form id="formUser" th:action="${addStatus==true?'/user/add':'/user/update'}" th:object="${user}"
           class="form-horizontal" method="POST" autocomplete="false">
         <div class="row">
             <!--Left Side-->
             <div class="form-batch col-md-5 col-sm-7 text-left flex-column">
-                <div id="idHide" th:if="${addStatus==false}" class="form-row">
+                <div id="idHide"   data-th-if="${addStatus==false}" class="form-row">
                     <div class="col-md-4">
                         <label class="control-label" for="id">ID :</label>
                     </div>
@@ -113,18 +113,18 @@
                         <label class="control-label" for="employee">Employee :</label>
                     </div>
                     <div class="col-md-8">
-                        <select class="form-control" th:field="*{employee}" th:each="e : ${employee}" name="employee"
+                        <select class="form-control" th:field="*{employee}"   data-th-each="e : ${employee}" name="employee"
                                 id="employee" required>
                             <option id="employeeList"
-                                    th:text="${e.title.title} + ${' '} + ${e.name} +${' - '} + ${e.nic}"
+                                      data-th-text="${e.title.title} + ${' '} + ${e.name} +${' - '} + ${e.nic}"
                                     th:value="${e.id}"
                                     th:field="*{employee}" value="">Please select
                             </option>
                         </select>
-                        <div id="employeeNameBox" th:if="${addStatus==false}">
+                        <div id="employeeNameBox"   data-th-if="${addStatus==false}">
                             <strong>
                                 <span id="employeeName"
-                                      th:text="${user.employee.title.title} + ${' '} + ${user.employee.name} +${' - '} + ${user.employee.nic}"></span>
+                                        data-th-text="${user.employee.title.title} + ${' '} + ${user.employee.name} +${' - '} + ${user.employee.nic}"></span>
                                 <input type="hidden" id="employeeSelected" th:field="*{employee}">
                             </strong>
                         </div>
@@ -165,8 +165,8 @@
                 <div class="form-row">
                     <label class="control-label" for="roles">Roles :</label>
                     <select id="roles" th:field="*{roles}" class="form-control" size="16" multiple required>
-                        <option id="roleList" th:each="role, rowCount : ${roleList}"
-                                th:text="${rowCount.count} +${'. '}+${role.roleName}"
+                        <option id="roleList"   data-th-each="role, rowCount : ${roleList}"
+                                  data-th-text="${rowCount.count} +${'. '}+${role.roleName}"
                                 th:value="${role.id}"
                                 th:field="*{roles}" value=""></option>
                     </select>
@@ -177,15 +177,15 @@
             <div class="form-batch col-md-12 col-sm-12 text-center flex-column">
                 <button class="btn btn-success" type="submit">
                     <i class="fa fa-save" style="font-size: 20px"></i>&nbsp; &nbsp;<span
-                        id="submit" th:text="${addStatus==true?'Save': 'Update'}">                        </span>
+                        id="submit"   data-th-text="${addStatus==true?'Save': 'Update'}">                        </span>
                 </button>
             </div>
         </div>
         <!--Error-->
         <div class="form-row">
-            <label id="errorLabel" th:if="${#fields.hasErrors('*')}" th:text="'Errors: '">Errors: </label>
+            <label id="errorLabel"   data-th-if="${#fields.hasErrors('*')}" th:text="'Errors: '">Errors: </label>
             <ul>
-                <li id="errorDisplay" class="error" th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+                <li id="errorDisplay" class="error"   data-th-each="err: ${#fields.errors('*')}"   data-th-text="${err}"></li>
             </ul>
         </div>
     </form>
