--- a/src/main/resources/templates/batchStudent/batchStudent.html
+++ b/src/main/resources/templates/batchStudent/batchStudent.html
@@ -34,7 +34,7 @@
 </div >
 <div class="container-fluid formBorder text-center" >
   <div class="col" >
-    <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(batches)}" >
+    <div class="col" id="employeeListPresent"   data-th-if="${not #lists.isEmpty(batches)}" >
       <table class="table table-hover table-striped" id="myTable" >
         <thead >
         <tr >
@@ -47,15 +47,15 @@
         </tr >
         </thead >
         <tbody >
-        <tr th:each="batch, rowCount : ${batches}" >
-          <th th:text="${rowCount.count}" ></th >
-          <th th:text="${batch.code}" ></th >
-          <th th:text="${batch.name}" ></th >
-          <th th:text="${batch.teacher.name}" ></th >
-          <th th:text="${batch.count}" ></th >
+        <tr   data-th-each="batch, rowCount : ${batches}" >
+          <th   data-th-text="${rowCount.count}" ></th >
+          <th   data-th-text="${batch.code}" ></th >
+          <th   data-th-text="${batch.name}" ></th >
+          <th   data-th-text="${batch.teacher.name}" ></th >
+          <th   data-th-text="${batch.count}" ></th >
           <th >
-            <a th:href="${'/batch/' + batch.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;Add Student</a >
-            <a th:href="${'/batch/student/' + batch.id}" class="btn btn-primary btn-sm" ><i class="fa fa-edit" ></i >&nbsp;Show
+            <a   data-th-href="${'/batchStudent/batch/' + batch.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;Add Student</a >
+            <a   data-th-href="${'/batchStudent/batch/student/' + batch.id}" class="btn btn-primary btn-sm" ><i class="fa fa-edit" ></i >&nbsp;Show
                                                                                                                      Student</a >
           </th >
         </tr >
@@ -63,7 +63,7 @@
       </table >
     </div >
   </div >
-  <div class="row" th:if="${ #lists.isEmpty(batches)}" >
+  <div class="row"   data-th-if="${ #lists.isEmpty(batches)}" >
     <div class="col-sm-12" >
       <div class="alert alert-warning alert-dismissible fade show" role="alert" >
         <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
