--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -11,7 +11,7 @@
     <div class="col-md-12 flex-column ">
         <!--Container spaces-->
         <div class="row text-center">
-            <h4><b><span th:text="${#authentication.name}"></span></b></h4>
+            <h4><b><span   data-th-text="${#authentication.name}"></span></b></h4>
         </div>
         <div class="col-6 offset-2">
             <form class="form-horizontal" id="form" th:action="${'/passwordChange'}" th:object="${pswChange}" th:method="POST">
@@ -24,7 +24,7 @@
                         <div class="col-md-6 input-group">
                             <input type="password" th:field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
                                    class="form-control pwd" name="opsw" required/>
-                            <span class="error" id="opswError" th:errors="*{oldPassword}" th:if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
+                            <span class="error" id="opswError" th:errors="*{oldPassword}"   data-th-if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
 
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                         <div class="col-md-6">
                             <input type="password" th:field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
                                    class="form-control pwd" name="npsw" required/>
-                            <span class="error" th:errors="*{newPassword}" th:if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
+                            <span class="error" th:errors="*{newPassword}"   data-th-if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultOne"></span>
                             </div>
@@ -50,7 +50,7 @@
                         <div class="col-md-6">
                             <input type="password" th:field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
                                    class="form-control pwd" name="nrepsw" required/>
-                            <span class="error" id="nrepswError" th:errors="*{newPasswordConform}" th:if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
+                            <span class="error" id="nrepswError" th:errors="*{newPasswordConform}"   data-th-if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultTwo"></span>
                             </div>
@@ -81,9 +81,9 @@
         </div>
     </div>
 </div>
-<div id="message" th:if="${message}" th:class="${'alert alert-dismissable' + alertClass}">
+<div id="message"   data-th-if="${message}" th:class="${'alert alert-dismissable' + alertClass}">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong> <span id="messageNote" th:text="${message}"></span></strong>
+    <strong> <span id="messageNote"   data-th-text="${message}"></span></strong>
 </div>
 <!--footer include-->
 <footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
