--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -26,25 +26,25 @@
     </div>
 </div>
 <div class="container-fluid bg-dark formBorder">
-    <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" th:if="${not #lists.isEmpty(roles)}">
+    <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent"   data-th-if="${not #lists.isEmpty(roles)}">
         <div class="table-responsive">
             <table class="table table-striped table-condensed">
                 <thead>
                 <tr>
                     <th> Index</th>
                     <th> Name</th>
-                    <th th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"> Modify</th>
+                    <th   data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"> Modify</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="role, rowCount : ${roles}">
-                    <th th:text="${rowCount.count}"></th>
-                    <th th:text="${role.roleName}"></th>
-                    <th th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-                        <a id="edit" th:href="${'/role/edit/' + role.id}" class="btn btn-primary btn-sm mr-2 p-2">Edit
+                <tr   data-th-each="role, rowCount : ${roles}">
+                    <th   data-th-text="${rowCount.count}"></th>
+                    <th   data-th-text="${role.roleName}"></th>
+                    <th   data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+                        <a id="edit"   data-th-href="${'/role/edit/' + role.id}" class="btn btn-primary btn-sm mr-2 p-2">Edit
                         </a>
                         &nbsp;
-                        <a id="remove" th:href="${'/role/remove/' + role.id}" class="btn btn-danger btn-sm mr-2 p-2"
+                        <a id="remove"   data-th-href="${'/role/remove/' + role.id}" class="btn btn-danger btn-sm mr-2 p-2"
                            onclick="if
                         (!(confirm('Are you sure you want to delete this role?'))) return false"
 >Delete</a></th>
